# rinha-de-backend-2026

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf
docs/br/: IMPLEMENTACAO_C4.md  README.md
docs/en/: IMPLEMENTATION_C4.md  README.md
src/: lib.rs  search.rs  simd.rs
