[package]
name = "rinha-backend-2026"
version = "0.1.0"
edition = "2024"

[lib]
name = "rinha_backend_2026"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "build_artifacts"
path = "src/bin/build_artifacts.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
flate2 = "1.1.5"
memmap2 = "0.9.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
